--- a/product-info.html
+++ b/product-info.html
@@ -13,6 +13,7 @@
     />
     <link href="css/font-awesome.min.css" rel="stylesheet" />
     <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/dark_mode.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/product-info.css" />
     <link
@@ -28,7 +29,7 @@
     ></script>
   </head>
 
-  <body>
+  <body class="dark_mode">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1"></nav>
     <main>
       <div class="ful-img" id="fulImgBox">
