--- a/products.html
+++ b/products.html
@@ -14,6 +14,7 @@
     />
     <link href="css/font-awesome.min.css" rel="stylesheet" />
     <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/dark_mode.css" rel="stylesheet" />
     <link rel="stylesheet" href="./css/productos.css">
     <link href="css/navbar.css" rel="stylesheet" />
     <link href="css/footer.css" rel="stylesheet" />
@@ -22,7 +23,7 @@
      <script src="https://kit.fontawesome.com/2919f68f3c.js" crossorigin="anonymous"></script>
   </head>
 
-  <body>
+  <body class="dark_mode">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1"></nav>
     <main >
       <div class="container">
@@ -35,13 +36,13 @@
             <div class="btn-group btn-group-toggle mb-4" data-bs-toggle="buttons">
               <div id="searchContainer"></div>
               <input type="radio" class="btn-check" name="options" id="sortDesc">
-              <label class="btn btn-light" for="sortDesc"><i class="fas fa-sort-amount-up"></i></label>
+              <label class="btn " for="sortDesc"><i class="fas fa-sort-amount-up"></i></label>
 
               <input type="radio" class="btn-check" name="options" id="sortAsc">
-              <label class="btn btn-light" for="sortAsc"><i class="fas fa-sort-amount-down"></i></label>
+              <label class="btn " for="sortAsc"><i class="fas fa-sort-amount-down"></i></label>
 
               <input type="radio" class="btn-check" name="options" id="sortByCount" checked>
-              <label class="btn btn-light" for="sortByCount"><i class="fas fa-sort-amount-down"></i></label>
+              <label class="btn " for="sortByCount"><i class="fas fa-sort-amount-down"></i></label>
               
             </div>
           </div>
