--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     />
     <link href="css/bootstrap.min.css" rel="stylesheet" />
 
+    <link href="css/dark_mode.css" rel="stylesheet" />
     <link href="css/index.css" rel="stylesheet" />
     <link href="css/navbar.css" rel="stylesheet" />
     <link href="css/footer.css" rel="stylesheet" />
