--- a/sell.html
+++ b/sell.html
@@ -11,11 +11,12 @@
   <link href="css/styles.css" rel="stylesheet">
   <link href="css/navbar.css" rel="stylesheet" />
   <link href="css/footer.css" rel="stylesheet" />
+  <link href="./css/dark_mode.css" rel="stylesheet" />
    <!-- font awesome -->
    <script src="https://kit.fontawesome.com/2919f68f3c.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body  class="dark_mode">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1"></nav>
   <div class="container">
     <div class="text-center p-4">
@@ -123,7 +124,7 @@
           </div>
           <hr class="mb-4">
           <h4 class="mb-3">Costos</h4>
-          <ul class="list-group mb-3">
+          <ul id="sell_ul_dark_mode" class="list-group mb-3">
             <li class="list-group-item d-flex justify-content-between lh-condensed">
               <div>
                 <h6 class="my-0">Precio</h6>
