se le quito la base de datos

--- a/product-info.html
+++ b/product-info.html
@@ -56,31 +56,26 @@
           <label for="floatingTextarea2">Comentario: </label>
           <div class="">
             <div class="rating">
-              <input type="radio" id="star5" name="rating" value="5">
+              <input type="radio" id="star5" name="rating" value="5" />
               <label for="star5"></label>
-              <input type="radio" id="star4" name="rating" value="4">
+              <input type="radio" id="star4" name="rating" value="4" />
               <label for="star4"></label>
-              <input type="radio" id="star3" name="rating" value="3">
+              <input type="radio" id="star3" name="rating" value="3" />
               <label for="star3"></label>
-              <input type="radio" id="star2" name="rating" value="2">
+              <input type="radio" id="star2" name="rating" value="2" />
               <label for="star2"></label>
-              <input type="radio" id="star1" name="rating" value="1">
+              <input type="radio" id="star1" name="rating" value="1" />
               <label for="star1"></label>
             </div>
-            <!-- <select class="form-select mt-4" name="puntuacion" id="estrellas">
-              <option value="1">&#9733;</option>
-              <option value="2">&#9733; &#9733;</option>
-              <option value="3">&#9733; &#9733; &#9733;</option>
-              <option value="4">&#9733; &#9733; &#9733; &#9733;</option>
-              <option value="5">&#9733; &#9733; &#9733; &#9733; &#9733;</option>
-            </select> -->
           </div>
 
-          <button class="btn btn-warning mt-4" id="botonCmt">Enviar comentario</button>
+          <button class="btn btn-warning mt-4" id="botonCmt">
+            Enviar comentario
+          </button>
         </div>
 
         <!-- Puntuacion -->
-        
+
         <hr />
 
         <!-- Productos relacionados -->
