--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                   src="img/cars_index.jpg"
                   alt="Imgagen representativa de la categoría 'Autos'"
                 />
+                <div class="blob"></div>
                 <h3 class="m-3 dark_mode">Autos</h3>
                 <div class="card-body">
                   <p class="card-text dark_mode">
