--- a/product-info.html
+++ b/product-info.html
@@ -32,15 +32,17 @@
   <body class="dark_mode">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1"></nav>
     <main>
-      <div class="ful-img" id="fulImgBox">
+      <!-- <div class="ful-img" id="fulImgBox">
         <img src="img/car1.jpg" id="fulImg" />
         <span id="closeSpan" onclick="closeImg()"
           ><i class="fa-solid fa-circle-xmark"></i
         ></span>
-      </div>
+      </div> -->
       <div class="container">
-        <div id="carrusel"></div>
-        <div id="description"></div>
+        <div class="row">
+          <div id="carrusel"></div>
+          <div id="description"></div>
+        </div>
 
         <div class="accordion" id="comments"></div>
 
