Entrega 7 ejercicio grupal

--- a/product-info.html
+++ b/product-info.html
@@ -39,14 +39,12 @@
         ></span>
       </div> -->
       <div class="container">
+        <div id="title"></div>
         <div class="row">
-          <div id="carrusel"></div>
-          <div id="description"></div>
+          <div id="carrusel" class="col-lg-8 col-sm-12"></div>
+          <div id="description" class="col-lg-4 col-sm-12"></div>
         </div>
-
-        <div class="accordion" id="comments"></div>
-
-        <!-- Comentarios -->
+ <!-- Comentarios -->
         <div class="container1 form-floating">
           <textarea
             name="comentarios"
@@ -75,6 +73,8 @@
             Enviar comentario
           </button>
         </div>
+        <div class="accordion" id="comments"></div>
+
 
         <!-- Puntuacion -->
 
