--- a/my-profile.html
+++ b/my-profile.html
@@ -33,19 +33,97 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1"></nav>
   <main>
-    <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+<div id="contenedor-perfil">
+  <h1 class="dark_mode">Perfil</h1>
+  
+<div class="contenedor-inputs">
+  <div class="input-group mb-3">
+    <span class="input-group-text" id="inputGroup-sizing-default">Primer Nombre*</span>
+    <input id="first_name" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" required>
+  </div>
+  <div class="input-group mb-3">
+    <span class="input-group-text" id="inputGroup-sizing-default">Segundo Nombre</span>
+    <input id="second_name" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+  </div>
+  <div class="input-group mb-3">
+    <span class="input-group-text" id="inputGroup-sizing-default">Apellido*</span>
+    <input id="first_lastname" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" required>
+  </div>
+  <div class="input-group mb-3">
+    <span class="input-group-text" id="inputGroup-sizing-default">Segundo Apellido</span>
+    <input id="second_lastname" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+  </div>
+  <div class="input-group mb-3">
+    <label for="miInput"></label><span class="input-group-text" id="inputGroup-sizing-default">E-mail*</span></label>
+    <input id="email" type="email" name="nombre" id="miInput" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" required>
+  </div>
+
+  <div class="input-group mb-3">
+    <span class="input-group-text" id="inputGroup-sizing-default">Teléfono de contacto</span>
+    <input id="phone_number" type="number" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+  </div>
+
+  <div class="input-group mb-3">
+    <div class="mb-3">
+      <label for="formFile" class="form-label" id="pfp">Elegir nueva foto de perfil</label>
+      <input class="form-control" type="file" id="formFile">
+      <button type="button" class="btn btn-danger" id="delete-button">Eliminar foto</button>
+    </div>
+  </div>
+
+
+  <div class="upload-img">
+    <img id="image-preview" src="./img/profile.jpg" alt="Preview">
+  </div>
+
+  <button id="btn-guardar" type="button" class="btn btn-primary" onclick="changePfp()">Guardar cambios</button>
+
+
+
+  <!-- Este modal anda raro
+  <div class="input-group mb-3">
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+      Launch demo modal
+    </button>
+
+    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            ...
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
       </div>
     </div>
+  </div>
+  -->
+
+</div>
+
+
+</div>
+
+
+</div>
+
   </main>
   <footer class="text-muted"></footer>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
-  <script src="js/my-profile.js"></script>
-  <script src="js/validarUsuario.js"></script>
   <script src="./navbar.js"></script>
   <script src="./footer.js"></script>
+  <script src="js/validarUsuario.js"></script>
+  <script src="js/my-profile.js"></script>
 </body>
 
 </html>
